# vector

./: CLAUDE.md  Cargo.toml  Makefile  flake.nix
changelog.d/: 25521_windows_event_log_span_propagation.fix.md
distribution/docker/ubi-fips/: Dockerfile
lib/observo/scol/: Cargo.toml
lib/observo/stcp/: Cargo.toml
lib/vector-buffers/examples/: buffer_perf.rs
lib/vector-buffers/src/: config.rs  internal_events.rs  lib.rs  timed.rs
lib/vector-buffers/src/test/: variant.rs
lib/vector-buffers/src/topology/: builder.rs  test_util.rs
lib/vector-buffers/src/topology/channel/: receiver.rs  sender.rs  tests.rs
lib/vector-buffers/src/variants/: in_memory.rs
lib/vector-buffers/src/variants/disk_v2/: mod.rs
lib/vector-common/src/: backoff.rs  lib.rs
lib/vector-core/: Cargo.toml
lib/vector-core/proto/: event.proto
lib/vector-core/src/: fanout.rs  gcp.rs
lib/vector-core/src/config/: mod.rs  observo_metadata.rs
lib/vector-core/src/event/: proto.rs  ser.rs
lib/vector-core/src/metrics/: label_filter.rs  mod.rs  storage.rs
lib/vector-core/tests/: buffer_disk_v2_compat.rs  buffer_histogram_demo.rs  legacy_disk_buffer_fixture_gen.rs
lib/vector-lib/src/: lib.rs
lib/vector-lookup/src/lookup_v2/: mod.rs
lib/vector-tap/src/: controller.rs
src/common/: backoff.rs
src/conditions/: equality.rs  mod.rs
src/config/: sink.rs  source.rs  transform.rs
src/internal_events/: jwt_auth.rs  mod.rs  windows_event_log.rs
src/sinks/elasticsearch/: config.rs  mod.rs  service.rs
src/sinks/humio/: logs.rs
src/sinks/splunk_hec/common/: acknowledgements.rs  service.rs  util.rs
src/sinks/splunk_hec/logs/: config.rs  integration_tests.rs  tests.rs
src/sinks/splunk_hec/metrics/: config.rs  integration_tests.rs  tests.rs
src/sinks/util/: mod.rs  rejection_report.rs
src/sinks/vector/: config.rs
src/sources/: kafka.rs  mod.rs
src/sources/scol/: mod.rs
src/sources/splunk_hec/: mod.rs
src/sources/stcp/: mod.rs
src/sources/util/: jwt_auth.rs
src/sources/vector/: mod.rs
src/sources/windows_event_log/: checkpoint.rs  mod.rs  subscription.rs  xml_parser.rs
src/test_util/: jwt_auth.rs
src/topology/: builder.rs  mod.rs  running.rs  task.rs
src/topology/test/: mod.rs  queue_delay.rs
src/transforms/: hist_summ.rs  mod.rs  route.rs
