[package]
name = "vector-core"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ddsketch_extended)'] }

[dependencies]
async-trait = { version = "0.1", default-features = false }
bitmask-enum = { version = "2.2.5", default-features = false }
bytes = { version = "1.9.0", default-features = false, features = ["serde"] }
chrono.workspace = true
chrono-tz.workspace = true
crossbeam-utils = { version = "0.8.20", default-features = false }
derivative = { version = "2.2.0", default-features = false }
dyn-clone.workspace = true
enumflags2 = { version = "0.7.10", default-features = false }
float_eq = { version = "1.0", default-features = false }
futures.workspace = true
futures-util = { version = "0.3.29", default-features = false, features = ["std"] }
headers.workspace = true
http.workspace = true
hyper.workspace = true
hyper-openssl.workspace = true
hyper-proxy.workspace = true
indexmap.workspace = true
ipnet = { version = "2", default-features = false, features = ["serde", "std"] }
lookup = { package = "vector-lookup", path = "../vector-lookup" }
metrics.workspace = true
metrics-tracing-context.workspace = true
metrics-util.workspace = true
mlua = { version = "0.10.2", default-features = false, features = ["lua54", "send", "vendored"], optional = true }
no-proxy = { version  = "0.3.5", default-features = false, features = ["serialize"] }
ordered-float = { version = "4.5.0", default-features = false }
openssl = { version = "0.10.68", default-features = false, features = ["vendored"] }
parking_lot = { version = "0.12.3", default-features = false }
pin-project.workspace = true
proptest = { version = "1.5", optional = true }
prost-types.workspace = true
prost.workspace = true
quanta = { version = "0.12.3", default-features = false }
rand.workspace = true
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
ryu = { version = "1", default-features = false }
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.12.0", default-features = false, features = ["std", "macros"] }
smallvec = { version = "1", default-features = false, features = ["serde", "const_generics"] }
snafu.workspace = true
socket2 = { version = "0.5.8", default-features = false }
tokio = { version = "1.43.0", default-features = false, features = ["net"] }
tokio-openssl = { version = "0.6.5", default-features = false }
tokio-stream.workspace = true
tokio-util = { version = "0.7.0", default-features = false, features = ["time"] }
toml.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing = { version = "0.1.34", default-features = false }
url = { version = "2", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
uuid.workspace = true
vector-buffers = { path = "../vector-buffers", default-features = false }
vector-common = { path = "../vector-common" }
vector-config = { path = "../vector-config" }
vector-config-common = { path = "../vector-config-common" }
vrl.workspace = true
cfg-if.workspace = true
portpicker = { path = "../portpicker" }
chkpts = { path = "../observo/chkpts", optional = true }
base64 = { version = "0.22.1", default-features = false }
goauth = { version = "0.14.0", optional = true }
smpl_jwt = { version = "0.8.0", default-features = false, optional = true }
flate2.workspace = true
zstd.workspace = true
rand_distr.workspace = true
snap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.10.0"

[target.'cfg(windows)'.dependencies]
schannel = "0.1.27"

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
base64 = "0.22.1"
chrono-tz.workspace = true
criterion = { version = "0.5.1", features = ["html_reports"] }
env-test-util = "1.0.1"
metrics-util = { workspace = true, features = ["debugging"] }
quickcheck = "1"
quickcheck_macros = "1"
proptest = "1.5"
similar-asserts = "1.6.0"
tempfile = "3.15.0"
tokio-test = "0.4.4"
toml.workspace = true
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
noisy_float = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_yaml = { version = "0.9.34", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi", "registry"] }
vector-common = { path = "../vector-common", default-features = false, features = ["test"] }
vector-core = { path = ".", features = ["test"] }

[features]
default = []
lua = ["dep:mlua", "vrl/lua"]
vrl = []
test = ["vector-common/test", "proptest"]
observo = ["dep:chkpts"]
gcp = ["dep:goauth", "dep:smpl_jwt"]

[[bench]]
name = "event"
path = "benches/event/main.rs"
harness = false
