#This file is NOT part of the open-source components licensed under the Mozilla Public License, v. 2.0 (MPL-2.0).
#Proprietary and Confidential – © 2025 Observo Inc.
#Unauthorized copying, modification, distribution, or disclosure of this file, via any medium, is strictly prohibited.
#This file is distributed separately and is not subject to the terms of the MPL-2.0.
[package]
name = "stcp"
version = "0.1.0"
authors = ["Observo <observo-all@observo.ai>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
vector-config = { path = "../../vector-config", default-features = false }
vector-lib = { path = "../../vector-lib", default-features = false, features = ["sources-utils-net-tcp"] }
tracing = { version = "0.1.34", default-features = false }
smallvec = { version = "1", default-features = false, features = ["union", "serde"] }
bytes = { version = "1.9.0", default-features = false, features = ["serde"] }
indexmap.workspace = true
vrl.workspace = true
tokio-util = { version = "0.7", default-features = false, features = ["io", "time"] }
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
hex = { version = "0.4.3", default-features = false }
inventory.workspace = true
toml.workspace = true
chrono.workspace = true

[dev-dependencies]
regex = "1"
